fix #6: colour contrast on sidebar section hover

--- a/styles.scss
+++ b/styles.scss
@@ -203,6 +203,10 @@ div.sidebar-item-container{
     color: var(--sidebar-text-color);
 }
 
+div.sidebar-item-container:hover,div.sidebar-item-container:focus {
+    color: var(--link-color); // work around https://github.com/uqlibrary/technology-training/issues/6
+}
+
 div.sidebar-item-container .active{
     color: var(--link-color);
 }
